# tunnel_manager

./: .env  .gitignore  .gitlint  .openapi-generator-ignore  Cargo.toml  Makefile  README.md  build.rs  go.mod  go.sum  main.go  makefile  openapi.yaml  package-lock.json  serverless.yml
.github/workflows/: rust.yml
api/: openapi.yaml
go/: README.md  api.go  api_default.go  api_default_service.go  logger.go  model_input_data.go  model_output_data.go  model_site.go  routers.go
migrations/2022-11-16-120801_initial_schema/: down.sql  up.sql
migrations/2022-11-16-120801_users/: down.sql  up.sql
migrations/2022-11-16-121123_permissions/: down.sql  up.sql
migrations/2022-11-16-121939_permission_membership/: down.sql  up.sql
migrations/2022-11-16-122202_agents/: down.sql  up.sql
migrations/2022-11-16-122305_routers/: down.sql  up.sql
migrations/2022-11-16-122539_tunnels/: down.sql  up.sql
old/: .env  Cargo.toml
old/src/: api.rs  lib.rs  models.rs  storage.rs
old/src/handlers/: agents.rs  login.rs  permissions.rs  routers.rs  tunnels.rs  users.rs
old/src/storage/: agents.rs  helpers.rs  permissions.rs  users.rs
openapi_ui/: index.html  openapi.json
openapiui/: openapi.json
proto/api/: agents.proto  login.proto  permission_membership.proto  permissions.proto  routers.proto  tunnels.proto  users.proto
sql/: 001_initial_schema.down.sql  001_initial_schema.up.sql
src/: api.rs  client.rs  handlers.rs  lib.rs  models.rs  schema.rs  server.rs  storage.rs
src/handlers/: agents.rs  login.rs  permission_membership.rs  permissions.rs  routers.rs  tunnels.rs  users.rs
src/helpers/: db.rs
src/models/: agents.rs  helpers.rs  permissions.rs  routers.rs  tunnels.rs  users.rs
src/storage/: agents.rs  helpers.rs  login.rs  permission_membership.rs  permissions.rs  posts.rs  routers.rs  tunnels.rs  users.rs
tests/: integration_test.rs
