[package]
name = "tunnel_manager"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
diesel_migrations = "2.0.0"
dotenvy = "0.15"
tonic = "0.8"
prost = "0.11"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
bcrypt = "0.13.0"
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.8"

#[dev-dependencies]
#test-log = { version = "0.2", default-features = false, features = ["trace"] }

[[bin]]
name = "server"

[lib]
doc = false
