[package]
name = "tunnel_manager"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
axum = "0.6"
clap = "4.1"
hyper = { version = "0.14", features = ["full"] }
pin-project = "1"
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
diesel_migrations = "2.0"
dotenvy = "0.15"
tonic = { version = "0.8", features = ["tls", "tls-roots", "prost"] }
tower = "0.4"
prost = "0.11"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bcrypt = "0.14"

[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] }

#[dev-dependencies]
#test-log = { version = "0.2", default-features = false, features = ["trace"] }

[[bin]]
name = "server"

[lib]
doc = false
