[package]
name = "tunnel_manager"
authors = ["Brian Hechinver <wonko@4amlunch.net>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]] # Bin to run the HelloWorld gRPC server
name = "tunnel-manager-server"
path = "../src/bin/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "tunnel-manager-client"
path = "src/bin/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
dotenvy = "0.15"

#[dependencies.sqlx]
#version = "0.6"
#features = [
#    "runtime-tokio-rustls",
#    "postgres",
#    "macros",
#    "migrate",
#    "uuid",
#    "ipnetwork",
#]

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.8"